Closed Bug 363617 Opened 18 years ago Closed 18 years ago

Missing support for some ARIA properties

Categories

(Core :: Disability Access APIs, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

(Blocks 1 open bug)

Details

(Keywords: access)

Attachments

(2 files)

The following ARIA properties (from http://www.w3.org/WAI/PF/Group/adaptable/) are not yet supported:

hasparent -- IDREF (relation)
live -- string
atomic -- boolean
relevant -- string
owns -- IDREFS (relations)
level -- numeric
datatype -- string (URL?)
posinset -- numeric
setsize -- numeric
sort -- string
Spunoff bug 363628 for support for the 2 relations: hasparent and owns.
Comment on attachment 248426 [details] [diff] [review]
Support the 8 new ARIA properties by directly mapping them to AT-SPI object attributes

Needs more tweaks so that level, posinset and setsize map to our MSAA positional description hack.
Attachment #248426 - Flags: superreview?(neil)
Attachment #248426 - Flags: review?(neil)
Comment on attachment 248438 [details] [diff] [review]
Support the new ARIA properties both in object attributes and in old-style MSAA positional description hack

>+    char *ariaProperties[] = { "live", "atomic", "relevant", "datatype", "level", "posinset", "setsize", "sort" };
Couldn't this be made static const?

Sorry, but I'd rather you found an alternate reviewer, if you don't mind.
Attachment #248438 - Flags: superreview?(neil)
Attachment #248438 - Flags: superreview+
Attachment #248438 - Flags: review?(neil)
Comment on attachment 248438 [details] [diff] [review]
Support the new ARIA properties both in object attributes and in old-style MSAA positional description hack

Thanks for the sr=, I'll make it static const char*
Attachment #248438 - Flags: review?(ginn.chen)
Comment on attachment 248438 [details] [diff] [review]
Support the new ARIA properties both in object attributes and in old-style MSAA positional description hack

I'm confused with posinset description on http://www.w3.org/WAI/PF/Group/adaptable/

It says "The posinset property is used to indicate an item's number or position in the current level. For example, if this element is the third item in a group then posinset is equal to three (integer: 0<=posinset<=n-1.)"
It's not clear whether posinset is zero-based.

If it's zero-based, maybe it's not good to say
"L%d, %d of %d", intLevel, intPosInSet, intSetSize

"L1, 0 of 3." or "L1, 1 of 3." may confuse people.


Also, what about changing 
intLevel >= 0 to intLevel >= 1 ,
intSetSize >= 0 to intSetSize >= 1 ?
Attachment #248438 - Flags: review?(ginn.chen) → review+
Yes, I noticed that too. I'm planning to send in feedback. When we get that cleared up I can make another patch.
Actually I just checked with the WG and they're going to make all 3 of these properties (level, posinset, setsize) >= 1.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
I've updated the docs to describe the new object attributes:
http://developer.mozilla.org/en/docs/Accessibility/ATSPI_Support#Supported_AT-SPI_Object_Attributes
(In reply to comment #9)
> Actually I just checked with the WG and they're going to make all 3 of these
> properties (level, posinset, setsize) >= 1.
> 

That's cool!
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: