Bug 363617. Missing support for some ARIA properties. r=ginn.chen, sr=neil